<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">BlitzMail</string>
    <string name="note_name" translatable="false">BlitzNote</string>
	<string name="send_mail">Send</string>
    <string name="sent_mail">Sent Mail</string>
    <string name="sending_mail">Sending BlitzMail</string>
    <string name="please_wait">Sending please wait&#8230;</string>
    <string name="try_again">"Try Again"</string>
    <string name="send_later">"Send Later"</string>
    <string name="dismiss">"Dismiss"</string>
    <string name="delete">Delete</string>
    <string name="pref_sending_title">Sending</string>
    <string name="pref_mail_server">Mail Server Settings</string>
    <string name="pref_summary_smtp_auth_off">Server does not require authentication</string>
    <string name="pref_summary_smtp_auth_on">Server requires authentication</string>
    <string name="pref_smtp_server">SMTP Server</string>
    <string name="pref_smtp_port">SMTP Port</string>
    <string name="pref_smtp_auth">SMTP Auth</string>
    <string name="pref_smtp_user">Username</string>
    <string name="pref_smtp_pass">Password</string>
    <string name="pref_summary_recipient">Mails will be send to this address</string>
    <string name="pref_recipient">Recipient Address</string>
    <string name="pref_sender">Sender Address</string>
    <string name="pref_sender_name">Sender Name</string>
    <string name="pref_summary_sender">Mails will appear to come from this address</string>
    <string name="pref_smtp_encryption">Encryption</string>
    <string name="pref_send_now">Send Queued Mails Now</string>
    <string name="pref_send_now_summary">There is %d mails waiting to be sent</string>
    <string name="error">Error</string>
    <string name="error_option_not_set">Please set this option:</string>
    <string name="error_no_body_no_subject">Did not get body or subject. Mail not send because it would be empty.</string>
    <string name="error_auth_failed">Authentication failed. Please check your username and password!</string>
    <string name="error_smtp">The server returned the following error. Please check your SMTP settings.</string>
    <string name="error_no_connection">No connection to the internet found. Please establish connectivity and try again.</string>
    <string name="error_sslcert_invalid">Your server\'s SSL certificate is not trusted by your Android system. Please import the certificate and try again.</string>
    <string name="error_decrypt">Could not decrypt your password. Did you move the app to another device? Please enter your password again in the settings.</string>
    <string name="error_lite_version">Unfortunately, this feature is only available in BlitzMail Pro. Please get this version to use all features and to support the development of this app.</string>
    <string name="error_timeout">The connection to the mail server timed out. Please try again later or check your SMTP settings.</string>
    <string name="error_noaction">Unsupported way of calling BlitzMail. Please report what you did to cause this to the developer!</string>
    <string name="error_attachment">Could not get attachment for mail.</string>
    <string name="error_file_not_found">File not found! Maybe it has been deleted since you tried to send the mail?</string>
    <string name="error_permission_denied">Could not send mail without required permission.</string>
    <string name="error_no_permission">Don\'t have permission to access file. Please grant permission in settings!</string>
    <string name="pref_interface">Interface</string>
    <string name="pref_success_notification">Show Notification for Sent Mail</string>
    <string name="pref_summary_success_notification_on">Show notification in status bar after mail has been sent</string>
    <string name="pref_summary_success_notification_off">Don\'t show notification in status bar after mail has been sent</string>
    <string name="files_shared">File(s) shared with</string>
    <string name="save">Save</string>
    <string name="warning_nothing_to_send">Nothing to send</string>
    <string name="mail_queued">Mail will be send when online</string>

    <string name="files_shared_1">File: %s</string>
    <string name="files_shared_2">Files: %s and %s</string>
    <string name="files_shared_3">Files: %s and %d more</string>
</resources>